--- a/webapp/assets/styles.css
+++ b/webapp/assets/styles.css
@@ -16,6 +16,7 @@ body {
 
 .parent-div {
   display: flex;
+  width: 100%;
 }
 
 .child-1 {
@@ -145,7 +146,6 @@ body {
   color: #012443;
 }
 
-/* // Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) { 
   .parent-div {
     flex-direction: column-reverse;
